--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Blog</h1>
-      <h2 class="project-tagline">this is my blog</h2>
+      <h2 class="project-tagline">this is zlq blog</h2>
       <a href="https://github.com/pzlq1991/Blog" class="btn">View on GitHub</a>
       <a href="https://github.com/pzlq1991/Blog/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/pzlq1991/Blog/tarball/master" class="btn">Download .tar.gz</a>
