--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en-us">
   <head>
+    <meta property="wb:webmaster" content="048c804e8265000a" />
     <meta charset="UTF-8">
     <title>liqunzhang's Blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,6 +9,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <meta property="wb:webmaster" content="048c804e8265000a" />
   </head>
   <body>
     <section class="page-header">
